helm/istio/peer-auth.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: eshop
spec:
  mtls:
    mode: STRICT
