helm/istio/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: eshop-gateway
  namespace: eshop
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: eshop-tls
      hosts:
        - app.eshop.local
        - api.eshop.local
        - id.eshop.local
