helm/istio/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-from-outside-trusted-namespaces
  namespace: eshop
spec:
  selector:
    matchLabels: {}
  action: DENY
  rules:
  - from:
    - source:
        notNamespaces: ["eshop","istio-system"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-catalog-to-catalogdb
  namespace: eshop
spec:
  selector:
    matchLabels:
      app: catalog-db
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/eshop/sa/catalog-sa"]
    to:
    - operation:
        ports: ["5432"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-basket-to-basketdb
  namespace: eshop
spec:
  selector:
    matchLabels:
      app: basket-db
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/eshop/sa/basket-sa"]
    to:
    - operation:
        ports: ["5432"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ordering-to-orderdb
  namespace: eshop
spec:
  selector:
    matchLabels:
      app: order-db
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/eshop/sa/order-sa"]
    to:
    - operation:
        ports: ["1433"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-keycloak-to-keycloakdb
  namespace: eshop
spec:
  selector:
    matchLabels:
      app: keycloak-db
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/eshop/sa/keycloak-sa"]
    to:
    - operation:
        ports: ["5432"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-services-to-redis
  namespace: eshop
spec:
  selector:
    matchLabels:
      app: redis
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/eshop/sa/basket-sa
        - cluster.local/ns/eshop/sa/order-sa
    to:
    - operation:
        ports: ["6379"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-services-to-rabbitmq
  namespace: eshop
spec:
  selector:
    matchLabels:
      app: rabbit-mq
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/eshop/sa/catalog-sa
        - cluster.local/ns/eshop/sa/basket-sa
        - cluster.local/ns/eshop/sa/order-sa
        - cluster.local/ns/eshop/sa/keycloak-sa
    to:
    - operation:
        ports: ["5672"]
  - from:
    - source:
        principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway"]
    to:
    - operation:
        ports: ["15672"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-services-to-seq
  namespace: eshop
spec:
  selector:
    matchLabels:
      app: discount-seq
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/eshop/sa/discount-sa"]
    to:
    - operation:
        ports: ["5341"]
  - from:
    - source:
        principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway"]
    to:
    - operation:
        ports: ["80"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-services-to-keycloak
  namespace: eshop
spec:
  selector:
    matchLabels:
      app: keycloak-svc
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/eshop/sa/catalog-sa
        - cluster.local/ns/eshop/sa/basket-sa
        - cluster.local/ns/eshop/sa/discount-sa
        - cluster.local/ns/eshop/sa/order-sa
        - cluster.local/ns/eshop/sa/yarp-sa
        - cluster.local/ns/istio-system/sa/istio-ingressgateway
    to:
    - operation:
        ports: ["8080"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-services-to-catalog
  namespace: eshop
spec:
  selector:
    matchLabels:
      app: catalog-api
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/eshop/sa/basket-sa
        - cluster.local/ns/eshop/sa/order-sa
    to:
    - operation:
        ports: ["8080"]
  - from:
    - source:
        principals:
        - cluster.local/ns/eshop/sa/yarp-sa
    to:
    - operation:
        ports: ["80"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-services-to-basket
  namespace: eshop
spec:
  selector:
    matchLabels:
      app: basket-api
  action: ALLOW
  rules:
  - from:
    - source: 
        principals:
        - cluster.local/ns/eshop/sa/yarp-sa
    to:
    - operation:
        ports: ["8080"] 
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-services-to-discount
  namespace: eshop
spec:
  selector:
    matchLabels:
      app: discount-grpc
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/eshop/sa/basket-sa
    to:
    - operation:
        ports: ["8080"]
  - from:
    - source:
        principals:
        - cluster.local/ns/eshop/sa/yarp-sa
    to:
    - operation:
        ports: ["80"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-yarp
  namespace: eshop
spec:
  selector:
    matchLabels:
      app: yarp-api-gateway
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway"]
    to:
    - operation:
        ports: ["8080"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-webclient
  namespace: eshop
spec:
  selector:
    matchLabels:
      app: web-client
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway"]
    to:
    - operation:
        ports: ["80"]
